# melvil

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agnews_small.csv  agnews_topics.v1.json  pyproject.toml
.github/workflows/: release.yml  test.yml
benchmarks/: RESULTS.md  confirmation_tables.md  make_confirmation_report.py  make_report.py  miprov2_arm.py  prep_data.py  results_tables.md  run_confirmation.py  run_iteration.py  run_matrix.py
benchmarks/data/: ag_news.json  banking77.json  bbh_geometric.json  clinc150.json  emotion.json  gsm8k.json  massive.json  mit_restaurant.json  sst5.json  stance_abortion.json  trec.json
benchmarks/results/: ag_news_full_s0.json  ag_news_full_s1.json  ag_news_full_s2.json  ag_news_no_codebook_s0.json  ag_news_no_codebook_s1.json  ag_news_no_codebook_s2.json  ag_news_no_confusion_s0.json  ag_news_no_confusion_s1.json  ag_news_no_confusion_s2.json  ag_news_no_mining_s0.json  ag_news_no_mining_s1.json  ag_news_no_mining_s2.json  ag_news_seed_s0.json  ag_news_transfer_s0.json  ag_news_transfer_s1.json  ag_news_transfer_s2.json  ag_news_vanilla_s0.json  ag_news_vanilla_s1.json  ag_news_vanilla_s2.json  banking77_full_s0.json  banking77_full_s1.json  banking77_full_s2.json  banking77_no_codebook_s0.json  banking77_no_codebook_s1.json  banking77_no_codebook_s2.json  banking77_no_confusion_s0.json  banking77_no_confusion_s1.json  banking77_no_confusion_s2.json  banking77_no_mining_s0.json  banking77_no_mining_s1.json  banking77_no_mining_s2.json  banking77_seed_s0.json  banking77_transfer_s0.json  banking77_transfer_s1.json  banking77_transfer_s2.json  banking77_vanilla_s0.json  banking77_vanilla_s1.json  banking77_vanilla_s2.json  clinc150_full_s0.json  clinc150_full_s1.json  (+74 more)
benchmarks/results_confirm/: ag_news_full_s10.json  ag_news_full_s11.json  ag_news_full_s12.json  ag_news_miprov2_s10.json  ag_news_miprov2_s11.json  ag_news_miprov2_s12.json  ag_news_seed_s10.json  ag_news_vanilla_s10.json  ag_news_vanilla_s11.json  ag_news_vanilla_s12.json  banking77_full_s10.json  banking77_full_s11.json  banking77_full_s12.json  banking77_miprov2_s10.json  banking77_miprov2_s11.json  banking77_miprov2_s12.json  banking77_seed_s10.json  banking77_vanilla_s10.json  banking77_vanilla_s11.json  banking77_vanilla_s12.json  clinc150_full_s10.json  (+59 more)
docs/: api.md
examples/: agnews_demo.ipynb  quickstart.py
labelsmith/: __init__.py  _about.py  adapter.py  artifact.py  config.py  costs.py  data.py  evaluate.py  lmutil.py  optimize.py  program.py  screen.py  taskspec.py  testing.py
mechanistic/: RESULTS.md  cost_decomposition.py  curve_pool.jsonl  e1_analysis.py  e1_frontloading.py  e1_sensitivity.py  e2_dissociation.py  e3_extraction.py  e4_runner.py  e5b_live.py  e7_bestofk.py  e8_bootstrap.py  e8_diagnose.py  e9_diag_in_loop.py  e9_plot.py  gepa_f1_baseline.py  sim_racing.py  sim_stopping.py
melvil/: __init__.py  _about.py  adapter.py  artifact.py  c2f.py  config.py  costs.py  data.py  draft.py  evaluate.py  lmutil.py  optimize.py  program.py  proposer.py  screen.py  taskspec.py  testing.py
tests/: test_artifact.py  test_c2f.py  test_config.py  test_costs.py  test_draft.py  test_features_v02.py  test_offline_e2e.py  test_taskspec.py
(+1931 files in other folders)
