[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymelvil"
version = "0.4.1"
description = "Optimized, versioned classifier prompts from labeled examples — GEPA prompt evolution with a classification-specific layer."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Harish Varma Siravuri", email = "harish.siravuri@gmail.com" }]
keywords = ["prompt-optimization", "classification", "llm", "gepa", "dspy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dspy>=3.0",
    "gepa>=0.0.20",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
hf = ["datasets>=3.0"]
dev = ["pytest>=8.0", "ruff>=0.6", "datasets>=3.0"]

[project.urls]
Homepage = "https://github.com/harishsiravuri/melvil"
Issues = "https://github.com/harishsiravuri/melvil/issues"

[tool.hatch.build.targets.wheel]
packages = ["melvil"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM108"]  # ternary-vs-if is a style call we make per case

[tool.ruff.lint.per-file-ignores]
# the proposal template is natural-language prose; hard-wrapping it would
# change the prompt
"melvil/proposer.py" = ["E501"]
"melvil/c2f.py" = ["E501"]
"melvil/draft.py" = ["E501"]
# experiment scripts embed natural-language prompt templates
"mechanistic/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
